src/tree/tree.lit.scss
:host(fzn-tree)
{
  display: block;

  > .children,
  .children-level
  {
    padding-left: .6125rem;
  }

  > .children
  {
    .item
    {
      list-style-type: none;
      margin: 2px 0;

      & > a
      {
        font-weight: 500;
        padding: 0 .5rem;
        display: block;
        font-size: 1rem;
        height: 2rem;
        line-height: 2rem;
        color: rgba(255, 255, 255, .6);
        text-decoration: none;
        display: flex;
        opacity: 1;
        border-top-left-radius: 3px;
        border-bottom-left-radius: 3px;

        .left
        {
          display: inline-flex;
          flex-grow: 1;
          overflow: hidden;
          white-space: nowrap;

          > .icon
          {
            margin-right: .25rem;

            > .fa, .far, .fas
            {
              &:first-child
              {
                text-align: center;
                width: 1.5rem;
              }
            }
          }

          > .label
          {
            text-overflow: ellipsis;
            overflow: hidden;
          }
        }

        > .right
        {
          flex-shrink: 0;
          display: flex;
          flex-direction: row;
          justify-content: center;
          align-content: center;
          justify-items: center;
          align-items: center;
        }
      }
    }

    &.is-root:not(.has-top) .folder:first-child .folder-header
    {
      border-top: 0;
    }

    .folder
    {
      margin: 2px 0;

      .folder-header
      {
        display: flex;
        border: none;
        color: #FFFFFF;
        cursor: pointer;
        line-height: 2rem;
        padding: 0 .5rem 0 1rem;
        border-top: 1px solid rgba(0, 0, 0, .25);
        border-bottom: 1px solid rgba(0, 0, 0, .25);
        border-left: 1px solid rgba(0, 0, 0, .25);
        border-top-left-radius: 3px;
        border-bottom-left-radius: 3px;

        &:hover
        {
          border-top-color: rgba(0, 0, 0, .55);
          border-bottom-color: rgba(0, 0, 0, .55);
          border-left-color: rgba(0, 0, 0, .55);
          background-color: rgba(255, 255, 255, .05);
        }

        & > .left i.fa.state
        {
          margin-right: .325rem;
          line-height: inherit;
        }

        & > .right
        {
          flex-grow: 1;
          display: flex;
          justify-content: flex-end;
        }
      }

      .folder-body
      {
        display: none;
        box-sizing: border-box;
        margin-bottom: 0;
      }

      &.open
      {
        & > .folder-header
        {
          &:hover
          {
            border-bottom-color: rgba(0, 0, 0, .55);
          }
        }

        & > .folder-body
        {
          display: block;
        }
      }
    }

    // not first-level tree
    &.is-root {
      padding-left: 0;

      .folder
      {
        margin: 0;

        > .folder-header
        {
          display: flex;
          float: none;
          font-weight: bold;
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
          border-left: 0;

          *
          {
            user-select: none;
          }
        }
        &:last-child
        {
          > .folder-header
          {
            border-bottom-color: rgba(0, 0, 0, .25);

            &:hover
            {
              border-bottom-color: rgba(0, 0, 0, .55);
            }
          }
        }

        &.next-folder:not(.open)
        {
          > .folder-header
          {
            border-bottom:rgba(0, 0, 0, 0);
          }
        }

        &.open > .folder-header
        {
          border-bottom-color: transparent;

          &:hover
          {
            border-bottom-color: rgba(0, 0, 0, .55);
          }
        }
      }
    }
  }
}

:host(fzn-tree-item)
{
  display: block;

  *
  {
    user-select: none;
  }

  > a
  {
    font-weight: 500;
    padding: 0 .5rem;
    display: block;
    font-size: 1rem;
    height: 2rem;
    line-height: 2rem;
    color: rgba(255, 255, 255, .6);
    text-decoration: none;
    display: flex;
    opacity: 1;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;

    &.in-root
    {
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
    }

    .left
    {
      display: inline-flex;
      flex-grow: 1;
      overflow: hidden;
      white-space: nowrap;

      > .icon
      {
        margin-right: .25rem;

        > .fa, .far, .fas
        {
          &:first-child
          {
            text-align: center;
            width: 1.5rem;
          }
        }
      }

      > .label
      {
        text-overflow: ellipsis;
        overflow: hidden;
      }
    }

    > .right
    {
      flex-shrink: 0;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-content: center;
      justify-items: center;
      align-items: center;
    }

    &:hover
    {
      opacity: 1;
      background: #406DCE;

      fzn-drawer-public-item-icon::part(icon)
      {
        width: 1.5rem;
      }
    }

    &:active,
    &.active
    {
      background-color: transparent;
      background-image: linear-gradient(#020202, #101112);
      border-left: 2px solid #CEE61B;
      color: #FEFEFE;

      > .left .icon
      {
        color: #CEE61B;
      }
    }

    &.active
    {
      cursor: default;
    }
  }
}

